@@ -2,3 +2,4 @@
 Fuxmovies - Fix video listing & playback
 MissAV - Fix video listing
 JAV789 - Fix Video playback
+Pornhoarder - Fix Studios listing
